--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,29 +1,22 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Projects</h1>
+<article class="project">
+  <% @projects.each do |project| %>
+  <section class="project-head">
+    <h2><%= link_to project.name, projects_path(project) %></h2>
+    <small>
+      <time> <%= project.created_at.to_date.strftime("%d %B, %Y") %> </time>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+      <%= link_to 'Изменить', edit_project_path(project) %>
 
-  <tbody>
-    <% @projects.each do |project| %>
-      <tr>
-        <td><%= project.name %></td>
-        <td><%= project.description %></td>
-        <td><%= link_to 'Show', project %></td>
-        <td><%= link_to 'Edit', edit_project_path(project) %></td>
-        <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+      <%= link_to 'Удалить', project, method: :delete, data: { confirm: 'Are you sure?' } %>
+    </small>
+  </section>
 
-<br>
+  <section class="project-descrip">
+    <%= project.description %>
+  </section>
+  <% end %>
 
-<%= link_to 'New Project', new_project_path %>
+  </article>
