--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -27,6 +27,11 @@
   </div>
 
   <div class="field">
+    <%= form.label :assignet_to %>
+    <%= form.select(:assignet_to, @user_options, id: :task_assignet_to)%>
+  </div>
+
+  <div class="field">
     <%= form.label :status %>
     <%= form.check_box :status, id: :task_status %>
   </div>
