--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,16 +63,28 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-<div class="container">
-  	     <p class="notice"><%= notice %></p>
-       <p class="alert"><%= alert %></p>
+    <div class="container main">
+
+  	    <div class="row">
+          <div class="col-md-12">
+            <% flash.each do |name, message| %>
+              <div class="alert alert-<%= name %>">
+                <%= message %>
+              </div>
+            <% end %>
+          </div>
+        </div>
+
+
        <% if user_signed_in? %>
        <li><%= link_to "Выход", destroy_user_session_path, method: :delete %></li>
        <% else %>
        <li><%= link_to "Вход", new_user_session_path %></li>
        <li><%= link_to "Регистрация", new_user_registration_path %></li>
        <%end%>
+
       <%= yield %>
+
     </div>
   </body>
 </html>
