--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,33 +1,19 @@
-<p id="notice"><%= notice %></p>
+<h1>Задачи</h1>
+<%= link_to 'Создать', new_task_path, class: "btn btn-primary" %>
+<% @tasks.each do |task| %>
+<article class="task">
+  <section class="task-head">
+    <h2><%= link_to task.title, task_path(task) %></h2>
+    <small>
+      <time> <%= task.created_at.to_date.strftime("%d %B, %Y") %> </time>
 
-<h1>Tasks</h1>
+      <%= link_to 'Изменить', edit_task_path(task) %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Project</th>
-      <th>Status</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @tasks.each do |task| %>
-      <tr>
-        <td><%= task.title %></td>
-        <td><%= task.description %></td>
-        <td><%= task.project_id %></td>
-        <td><%= task.status %></td>
-        <td><%= link_to 'Show', task %></td>
-        <td><%= link_to 'Edit', edit_task_path(task) %></td>
-        <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      <%= link_to 'Удалить', task, method: :delete, data: { confirm: 'Are you sure?' } %>
+    </small>
+  </section>
+  <section class="task-descrip">
+    <%= task.description %>
+  </section>
+  </article>
     <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Task', new_task_path %>
