--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,8 +1,7 @@
 <%= form_with(model: [ @task ],  local: true) do |form| %>
   <% if @task.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(task.errors.count, "error") %> prohibited this task from being saved:</h2>
-
+    <div class="alert alert-danger">
+      <h5><%= t('common.errors') %> </h5>
       <ul>
       <% @task.errors.full_messages.each do |message| %>
         <li><%= message %></li>
@@ -11,32 +10,33 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :title %>
-    <%= form.text_field :title, id: :task_title %>
+    <%= form.text_field :title, id: :task_title, class: 'form-control' %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :description %>
-    <%= form.text_area :description, id: :task_description %>
+    <%= form.text_area :description, id: :task_description, class: 'form-control' %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :project_id %>
-    <%= form.number_field :project_id, :value => params[:project_id], id: :task_project_id %>
+    <%= form.number_field :project_id, :value => params[:project_id], id: :task_project_id, class: 'form-control' %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :assignet_to %>
     <%= form.select(:assignet_to, @user_options, id: :task_assignet_to)%>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :status %>
     <%= form.check_box :status, id: :task_status %>
   </div>
 
-  <div class="actions">
-    <%= form.submit %>
+  <div class="form-group">
+    <%= form.submit 'Сохранить', class: 'btn btn-primary' %>
+    <%= link_to 'Назад', :back, class: 'btn btn-outline-secondary' %>
   </div>
 <% end %>
