--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -86,5 +86,9 @@
       <%= yield %>
 
     </div>
+
+    <div class="row">
+      <div class="col-md-3">
+        <% render 'shared/submenu' %>
   </body>
 </html>
