--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -22,11 +22,11 @@
 
   <div class="form-group">
     <%= form.label :parent_id %>
-    <%= form.number_field :parent_id, id: :project_parent_id, class: 'form-control' %>
+    <%= form.collection_select :parent_id, @option_parent, :id, :name, {include_blank: true}, id: :project_parent_id, class: 'form-control' %>
   </div>
 
   <div class="form-group">
     <%= form.submit 'Сохранить', class: 'btn btn-primary'%>
-    <%= link_to 'Назад', :back, class: 'btn btn-outline-secondary' %>
+    <%= link_to 'Назад', :back, class: 'btn btn-outline-secondary' %> 
   </div>
 <% end %>
