--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,15 +48,15 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
+        <li></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Профиль <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
+            <li><%= link_to "Вход", new_user_session_path %></li>
+            <li><%= link_to "Регистрация", new_user_registration_path %></li>
             <li><a href="#">Something else here</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+            <li><%= link_to "Выход", destroy_user_session_path, method: :delete %></li>
           </ul>
         </li>
       </ul>
@@ -74,21 +74,15 @@
             <% end %>
           </div>
         </div>
+        <div class="row">
+          <div class="col-md-8">
+            <%= yield %>
+          </div>
+          <div class="col-md-3">
+            <%= render 'shared/submenu' %>
+          </div>
+        </div>
 
-
-       <% if user_signed_in? %>
-       <li><%= link_to "Выход", destroy_user_session_path, method: :delete %></li>
-       <% else %>
-       <li><%= link_to "Вход", new_user_session_path %></li>
-       <li><%= link_to "Регистрация", new_user_registration_path %></li>
-       <%end%>
-
-      <%= yield %>
-
-    </div>
-
-    <div class="row">
-      <div class="col-md-3">
-        <% render 'shared/submenu' %>
+    </div>        
   </body>
 </html>
