--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Проекты</h1>
+<%= link_to 'Создать', new_project_path, class: "btn btn-primary" %>
 <% @projects.each do |project| %>
 <article class="project">
   <section class="project-head">
