--- a/app/views/shared/_submenu_projects.html.erb
+++ b/app/views/shared/_submenu_projects.html.erb
@@ -1,8 +1,8 @@
-<ul class="nav nav-pills nav-stacked nested_nav"
-<% projects.each do |project, children| %>
-<li>
-<%= link_to project.name, project, class: "nav-link #{'active' if current_page?(project_path(project))}" %>
-<% render "shared/submenu_projects", projects: children if children.present? %>
-</li>
-<% end %>
+<ul class="nav nav-pills nav-stacked nested_nav">
+  <% projects.each do |project, children| %>
+   <li>
+     <%= link_to project.name, project, class: "nav-link #{'active' if current_page?(project_path(project))}" %>
+     <%= render 'shared/submenu_projects', project: children if children.present? %>
+   </li>
+  <% end %>
 </ul>
