--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,13 +1,18 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @project.name %>
-</p>
+<article class="project">
+    <section class="project-head">
+    	<h2><%= @project.name %></h2>
+      <time> <%= @project.created_at.to_date.strftime("%d %B, %Y") %> </time>
+      <%= link_to 'Редактировать', edit_project_path(@project), class: "btn btn-default col-md-offset-8" %>
+
+    </section>
 
 <p>
-  <strong>Description:</strong>
-  <%= @project.description %>
+  <strong>Описание:</strong>
+  <pre>
+    <%= @project.description %>
+  </pre>
 </p>
 
 <p> <strong>Tasks: </strong>
@@ -16,7 +21,6 @@
     <%end%>
   
 </p>
-
-<%= link_to 'Edit', edit_project_path(@project) %> |
-<%= link_to 'Back', projects_path %>|
-<%= link_to 'New Task', new_task_path(project_id: @project.id) %> |
+ <%= link_to 'Создать задачу', new_task_path(project_id: @project.id), class: "btn btn-default" %>
+<%= link_to 'Назад', :back, class: 'btn btn-outline-secondary' %> 
+</article>
