--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,9 +1,7 @@
 <p>
-  <strong>Commenter:</strong>
-  <%= User.find(comment.commenter).email %>
-</p>
- 
-<p>
-  <strong>Comment:</strong>
+	<strong>
+  <%= User.find(comment.commenter).email %>:
+  </strong>
+
   <%= comment.body %>
 </p>
