--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -11,17 +11,17 @@
   <% end %>
 
   <div class="form-group">
-    <%= form.label :name %>
+    <%= form.label :Название %>
     <%= form.text_field :name, id: :project_name, class: 'form-control' %>
   </div>
 
   <div class="form-group">
-    <%= form.label :description %>
+    <%= form.label :Описание %>
     <%= form.text_area :description, id: :project_description, class: 'form-control' %>
   </div>
 
   <div class="form-group">
-    <%= form.label :parent_id %>
+    <%= form.label :Родитель %>
     <%= form.collection_select :parent_id, @option_parent, :id, :name, {include_blank: true}, id: :project_parent_id, class: 'form-control' %>
   </div>
 
