--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,8 +31,8 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
+            <li><a href="#"></a></li>
+            <li></li>
             <li><a href="#">Something else here</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="#">Separated link</a></li>
@@ -41,22 +41,30 @@
           </ul>
         </li>
       </ul>
+          <%= form_tag welcome_index_path, :method => 'get', :class => 'navbar-form navbar-left' do %>
+          <div class="form-group">
+          <%= text_field_tag :fulsearch, params[:fulsearch], class: 'form-control' %>
+          </div>
+          <%= submit_tag :Поиск, :name => nil, class: "btn btn-default"%>
+          <% end %> 
       <form class="navbar-form navbar-left">
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
+          <input type="text" class="form-control" placeholder="Search"> 
         </div>
-        <button type="submit" class="btn btn-default">Submit</button>
+        <button type="submit" class="btn btn-default">Submit</button> 
       </form>
       <ul class="nav navbar-nav navbar-right">
         <li></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Профиль <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><%= link_to "Вход", new_user_session_path %></li>
-            <li><%= link_to "Регистрация", new_user_registration_path %></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
+            <% if user_signed_in? %>
             <li><%= link_to "Выход", destroy_user_session_path, method: :delete %></li>
+            <% else %>
+            <li><%= link_to "Вход", new_user_session_path %></li>
+            <li role="separator" class="divider"></li>
+            <li><%= link_to "Регистрация", new_user_registration_path %></li>
+            <% end %>
           </ul>
         </li>
       </ul>
