--- a/app/views/searches/new.html.erb
+++ b/app/views/searches/new.html.erb
@@ -13,12 +13,12 @@
 
   <div class="field">
     <%= form.label :Исполнитель %>
-    <%= form.collection_select(:assignet_to, User.order(:email), :id, :email) %>
+    <%= form.collection_select(:assignet_to, User.order(:email), :id, :email, include_blank: true) %>
   </div>
 
   <div class="form-group">
     <%= form.label :Статус %>
-    <%= form.check_box :status %>
+    <%= form.select :status, [['Закрыта', true], ['Открыта', false]], include_blank: true %>
   </div>
   <div class="form-group">
     <%= form.submit 'Сохранить', class: 'btn btn-primary' %>
