--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,6 +1,6 @@
 <p>
 	<strong>
-  <%= User.find(comment.commenter).email %>:
+  <%= User.find(comment.commenter).display_name %>:
   </strong>
 
   <%= comment.body %>
