--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,34 @@
 <h2>Регистрация</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+<%= devise_error_messages! %>
 
-  <div class="form-group">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
-  </div>
+<div class="form-group">
+<%= f.label :Имя %><br />
+<%= f.text_field :display_name, autofocus: true, class: "form-control" %>
+</div>
 
-  <div class="form-group">
-    <%= f.label :Пароль %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off", class: "form-control"  %>
-  </div>
+<div class="form-group">
+<%= f.label :email %><br />
+<%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
+</div>
 
-  <div class="form-group">
-    <%= f.label :Подтвердите_пароль %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control"  %>
-  </div>
+<div class="form-group">
+<%= f.label :Пароль %>
+<% if @minimum_password_length %>
+<em>(Минимум <%= @minimum_password_length %> символов)</em>
+<% end %><br />
+<%= f.password_field :password, autocomplete: "off", class: "form-control"  %>
+</div>
 
-  <div class="actions">
-    <%= f.submit "Регистрация", class: "btn btn-primary" %>
-  </div>
+<div class="form-group">
+<%= f.label :Подтвердите_пароль %><br />
+<%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control"  %>
+</div>
+
+<div class="actions">
+<%= f.submit "Регистрация", class: "btn btn-primary" %>
+</div>
 <% end %>
 
 <%= render "devise/shared/links" %>
