--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,18 +26,14 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="<%= projects_path %>">Проекты<span class="sr-only">(current)</span></a></li>
+        <li><a href="<%= projects_path %>">Проекты<span class="sr-only">(current)</span></a></li>
         <li><a href="<%= tasks_path %>">Задачи</a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Отчеты<span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#"></a></li>
-            <li></li>
-            <li><a href="#">Something else here</a></li>
+            <li><%= link_to 'Создать', new_search_path(:title => 'Создание отчета') %></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
+            <li><%= link_to 'Список', searches_path %></li>
           </ul>
         </li>
       </ul>
@@ -47,12 +43,6 @@
           </div>
           <%= submit_tag :Поиск, :name => nil, class: "btn btn-default"%>
           <% end %> 
-      <form class="navbar-form navbar-left">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search"> 
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button> 
-      </form>
       <ul class="nav navbar-nav navbar-right">
         <li></li>
         <li class="dropdown">
