--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -15,14 +15,7 @@
   </pre>
 </p>
 
-<p> <strong>Роли: </strong>
-
-<p> <strong>Tasks: </strong>
-    <% @project.tasks.each do |task| %>
-       <p><%= link_to "#{task.title}", task_path(task) %> </p>
-    <%end%>
-  
-</p>
+<%= link_to "Задачи", report_index_path(project_id: @project.id), class: "btn btn-primary" %>
  <%= link_to 'Создать задачу', new_task_path(project_id: @project.id), class: "btn btn-default" %>
 <%= link_to 'Назад', :back, class: 'btn btn-outline-secondary' %> 
 </article>
