--- a/app/views/searches/new.html.erb
+++ b/app/views/searches/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Поиск</h1>
+<h1><%= @title %></h1>
 <%=form_for @search do |form| %>
 
 <div class="form-group">
@@ -21,6 +21,6 @@
     <%= form.select :status, [['Закрыта', true], ['Открыта', false]], include_blank: true %>
   </div>
   <div class="form-group">
-    <%= form.submit 'Сохранить', class: 'btn btn-primary' %>
+    <%= form.submit 'Найти', class: 'btn btn-primary' %>
 </div>
 <% end %>
