--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -1,24 +1,32 @@
-<h1>Найденные задачи</h1>
+<h1>Результаты</h1>
 <% if @search.products.empty? %>
-	<p>NOTHING</p>
+	<h4 class="text-danger"> Не найдено подходящих объектов </h4>
 	<% else %>
   <h4 class="text-success"> Количество найденных задач: <%= @search.products.count %> </h4>
-<% @search.products.each do |s| %>
-	<article class="task">
-  <section class="task-head">
-    <h2><%= link_to s.title, task_path(s) %></h2>
-    <small>
-      <% if user_signed_in? %>
-      <%= link_to 'Изменить', edit_task_path(s) %>
+  <%= link_to "Скачать xls", search_path(@search, format: :xlsx), class: "btn btn-primary" %>
+	<section>
+    <table class="table">
+      <thead>
+        <tr>
+          <th>#</th>
+          <th>Название</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @search.products.each do |s| %>
+          <tr>
+            <td><%= s.id %></td>
+            <td><%= link_to s.title, task_path(s) %></td>
+            <td>
+              <%= link_to 'Изменить', edit_task_path(s), class: "btn btn-outline-primary btn-sm" %>
 
-      <%= link_to 'Удалить', s, method: :delete, data: { confirm: 'Are you sure?' } %>
-      <% end %>
-    </small>
+              <%= link_to 'Удалить', s, method: :delete, data: { confirm: 'вы уверены?' } , class: "btn btn-outline-primary btn-sm" %>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
   </section>
-  <section class="task-descrip">
-    <%= s.description %>
-  </section>
-  </article>
-	<% end %>
+  <% end %>
 
-<% end %>
