--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -2,25 +2,28 @@
 <article class="project">
     <section class="project-head">
       <h2><%= @task.title %></h2>
-      <time> <%= @project.created_at.to_date.strftime("%d %B, %Y") %> </time>
+      <time> <%= @task.created_at.to_date.strftime("%d %B, %Y") %> </time>
       <%= link_to 'Редактировать', edit_task_path(@task), class: "btn btn-default col-md-offset-8" %>
     </section>
         <p> Задача
         <% if @task.status %>
-          завершена
+          завершена. 
         <% else %>
-          открыта 
+          открыта. 
         <% end %> 
       </p>
+      <% if !@task.status %>
+      <p>Прогнозируемая продолжительность: <%= @task.prediction.round if @task.prediction %> дней</p>
+      <% end %>
      <p >  <strong>Проект: </strong>
     <%= link_to @project.name, project_path(@project) %>
 </p>
 
 <p>
   <strong>Описание:</strong>
-  <pre>
+  <p>
     <%= @task.description %>
-  </pre>
+  </p>
 </p> 
 
 <p><strong>Присвоено:</strong>
